Rename project from xibe-pr1 to PR-REVIEW-XIBE, updating titles, paths, and references across all relevant files.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>xibe-pr1 - AI-Powered PR Review Bot Dashboard</title>
+    <title>PR-REVIEW-XIBE - AI-Powered PR Review Bot Dashboard</title>
     <style>
         * {
             margin: 0;
@@ -448,7 +448,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <h1>🤖 xibe-pr1 Dashboard</h1>
+            <h1>🤖 PR-REVIEW-XIBE Dashboard</h1>
             <p>AI-Powered GitHub PR Review Bot - Real-time Monitoring</p>
             <div class="badge">📊 Live Webhook Monitoring • 🔍 Debug Tools • 📈 Analytics</div>
         </div>
